further progress with index and view run page

--- a/assets/bootstrap.css
+++ b/assets/bootstrap.css
@@ -12198,3 +12198,13 @@ table,
 .list-group {
   font-size: 0.9625rem;
 }
+
+.noUnderline {
+  text-decoration: none;
+}
+
+td a {
+  display: block;
+  border: 1px solid black;
+  padding: 16px;
+}
